--- a/miniftpd/Makefile
+++ b/miniftpd/Makefile
@@ -1,7 +1,8 @@
 CC=gcc
 CFLAGS=-Wall -g
 BIN=miniftpd.out
-OBJS=main.o sysutil.o session.o ftpproto.o privparent.o str.o tunable.o parseconf.o privsock.o
+OBJS=main.o sysutil.o session.o ftpproto.o privparent.o str.o \
+	 tunable.o parseconf.o privsock.o hash.o
 LIBS=-lcrypt
 
 $(BIN):$(OBJS)
